<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textSize="30sp"/>




    <Button
        android:id="@+id/btn_about_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/circle_bg"
        android:text="@string/about_alc"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle_bg"
        android:padding="16dp"
        android:text="@string/my_profile"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />



</LinearLayout>