<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/circle_transparent"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/image"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/my_name"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout

            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/track"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="serif"
                android:text="@string/android"
                android:textSize="20sp"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="Country:"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="serif"
                android:text="Nigeria"
                android:textSize="20sp"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="Email:"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="serif"
                android:text="@string/email"
                android:textSize="20sp"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/phone_number"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="serif"
                android:text="@string/number"
                android:textSize="20sp"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="Slack Username:"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="serif"
                android:text="@string/ayusma"
                android:textSize="20sp"
                android:typeface="normal" />

        </LinearLayout>






    </LinearLayout>



    </RelativeLayout>

</ScrollView>

